feat: 26.2的多语言调试GUI