@@ -1,12 +1,14 @@
 package me.aleksilassila.litematica.printer.mixin.printer.mc;
 
-import me.aleksilassila.litematica.printer.config.Configs;
-import me.aleksilassila.litematica.printer.handler.Module;
 import me.aleksilassila.litematica.printer.handler.ModuleManager;
+import me.aleksilassila.litematica.printer.utils.RenderUtils;
+import me.aleksilassila.litematica.printer.config.Configs;
+import me.aleksilassila.litematica.printer.enums.ScanState;
+import me.aleksilassila.litematica.printer.handler.Module;
 import me.aleksilassila.litematica.printer.handler.GuiBlockInfo;
 import me.aleksilassila.litematica.printer.handler.handlers.GUI;
 import me.aleksilassila.litematica.printer.utils.ConfigUtils;
-import me.aleksilassila.litematica.printer.utils.RenderUtils;
+import me.aleksilassila.litematica.printer.utils.MessageUtils;
 import net.minecraft.client.DeltaTracker;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphicsExtractor;
@@ -27,15 +29,40 @@ import java.util.Map;
 @Mixin(Hud.class)
 public abstract class MixinHud {
     @Unique
+    private static final String KEY_HANDLER_TYPE = "litematica-printer.hud.debug.handlerType";
+    @Unique
+    private static final String KEY_SCAN_STATE = "litematica-printer.hud.debug.scanState";
+    @Unique
+    private static final String KEY_CURRENT_POS = "litematica-printer.hud.debug.currentPos";
+    @Unique
+    private static final String KEY_SCHEMATIC_BLOCK = "litematica-printer.hud.debug.schematicBlock";
+    @Unique
+    private static final String KEY_CURRENT_BLOCK = "litematica-printer.hud.debug.currentBlock";
+    @Unique
+    private static final String KEY_INTERACTED = "litematica-printer.hud.debug.interacted";
+    @Unique
+    private static final String KEY_IN_SELECTION = "litematica-printer.hud.debug.inSelection";
+    @Unique
+    private static final String KEY_EXECUTED = "litematica-printer.hud.debug.executed";
+    @Unique
+    private static final String KEY_GLOBAL_TICK = "litematica-printer.hud.debug.globalTick";
+    @Unique
+    private static final String KEY_ACTIVE_MODULES = "litematica-printer.hud.debug.activeModules";
+    @Unique
+    private static final String KEY_SCAN_MODE = "litematica-printer.hud.debug.scanMode";
+    @Unique
+    private static final String KEY_LAG_PAUSED = "litematica-printer.hud.lagPaused";
+
+    @Unique
     private static final int DEBUG_PADDING = 4;
     @Unique
     private static final int DEBUG_LINE_HEIGHT = 12;
     @Unique
     private static final int MIN_COLUMN_WIDTH = 120;
     @Unique
-    private static final int SIDE_MARGIN = 10; // 屏幕左右边距
+    private static final int SIDE_MARGIN = 10;
     @Unique
-    private static final int COLUMN_SPACING = DEBUG_PADDING * 3; // 列之间的间距
+    private static final int COLUMN_SPACING = DEBUG_PADDING * 3;
     @Unique
     private static final int COMMON_INFO_OFFSET_Y = 10;
 
@@ -45,17 +72,19 @@ public abstract class MixinHud {
     }
 
     @Unique
-    private List<String> buildHandlerDebugLines(Module handler, GuiBlockInfo guiInfo) {
+    private List<String> buildHandlerDebugLines(Module module, GuiBlockInfo guiInfo) {
         List<String> lines = new ArrayList<>();
-        lines.add("处理类型: " + handler.getId());
-        lines.add("当前位置: " + guiInfo.pos.toShortString());
+        lines.add(MessageUtils.translatable(KEY_HANDLER_TYPE, module.getId()).getString());
+        ScanState state = module.getScanState();
+        lines.add(MessageUtils.translatable(KEY_SCAN_STATE, state).getString());
+        lines.add(MessageUtils.translatable(KEY_CURRENT_POS, guiInfo.pos.toShortString()).getString());
         if (guiInfo.requiredState != null) {
-            lines.add("投影方块: " + guiInfo.requiredState.getBlock().getName().getString());
+            lines.add(MessageUtils.translatable(KEY_SCHEMATIC_BLOCK, guiInfo.requiredState.getBlock().getName().getString()).getString());
         }
-        lines.add("当前方块: " + guiInfo.currentState.getBlock().getName().getString());
-        lines.add("交互范围: " + booleanToColoredString(guiInfo.interacted));
-        lines.add("选区类型: " + booleanToColoredString(guiInfo.posInSelectionRange));
-        lines.add("已经执行: " + booleanToColoredString(guiInfo.execute));
+        lines.add(MessageUtils.translatable(KEY_CURRENT_BLOCK, guiInfo.currentState.getBlock().getName().getString()).getString());
+        lines.add(MessageUtils.translatable(KEY_INTERACTED, booleanToColoredString(guiInfo.interacted)).getString());
+        lines.add(MessageUtils.translatable(KEY_IN_SELECTION, booleanToColoredString(guiInfo.posInSelectionRange)).getString());
+        lines.add(MessageUtils.translatable(KEY_EXECUTED, booleanToColoredString(guiInfo.execute)).getString());
 
         return lines;
     }
@@ -67,7 +96,6 @@ public abstract class MixinHud {
 
     // @formatter:off
     @Inject(method = "extractHotbarAndDecorations", at = @At("TAIL"))
-
     private void hookRenderItemHotbar(GuiGraphicsExtractor graphics, DeltaTracker deltaTracker, CallbackInfo ci) {
         Minecraft mc = Minecraft.getInstance();
         if (mc.player == null || mc.level == null || mc.player.isSpectator() || !ConfigUtils.isPrinterEnable()) {
@@ -77,7 +105,6 @@ public abstract class MixinHud {
         float scaledWidth = mc.getWindow().getGuiScaledWidth();
         float scaledHeight = mc.getWindow().getGuiScaledHeight();
 
-        // 初始化渲染矩阵
         RenderUtils.initGuiGraphics(graphics);
 
         if (Configs.Core.DEBUG_OUTPUT.getBooleanValue()) {
@@ -90,122 +117,104 @@ public abstract class MixinHud {
     }
     // @formatter:on
 
-    // 调试信息绘制
     @Unique
     private void drawDebugInfo(float scaledWidth, float scaledHeight) {
         Minecraft mc = Minecraft.getInstance();
-        List<Module> validHandlers = new ArrayList<>();
+        List<Module> validModules = new ArrayList<>();
         Map<Module, GuiBlockInfo> guiInfoMap = new HashMap<>();
         int globalMaxTextWidth = MIN_COLUMN_WIDTH;
 
-        for (Module handler : ModuleManager.VALUES) {
-            GuiBlockInfo guiInfo = handler.getGuiInfo();
+        for (Module module : ModuleManager.VALUES) {
+            GuiBlockInfo guiInfo = module.getGuiInfo();
             if (guiInfo == null) continue;
 
-            validHandlers.add(handler);
-            guiInfoMap.put(handler, guiInfo);
-            List<String> lines = buildHandlerDebugLines(handler, guiInfo);
+            validModules.add(module);
+            guiInfoMap.put(module, guiInfo);
+            List<String> lines = buildHandlerDebugLines(module, guiInfo);
             for (String line : lines) {
                 String cleanLine = line.replaceAll("§[0-9a-fA-Fklmnor]", "");
                 globalMaxTextWidth = Math.max(globalMaxTextWidth, mc.font.width(cleanLine));
             }
         }
 
-        if (validHandlers.isEmpty()) return;
+        if (validModules.isEmpty()) return;
 
         int commonInfoBottomY = drawCommonDebugInfo(SIDE_MARGIN, SIDE_MARGIN);
 
         int columnWidth = globalMaxTextWidth + DEBUG_PADDING * 2;
         int maxColumnsPerSide = calculateMaxColumnsPerSide(scaledWidth, columnWidth);
+        int availableHeight = (int) (scaledHeight - commonInfoBottomY - COMMON_INFO_OFFSET_Y - SIDE_MARGIN);
 
-        int drawnHandlers = drawHandlerPanels(
-                validHandlers, guiInfoMap, 0,
+        int drawnModules = drawModulePanels(
+                validModules, guiInfoMap, 0,
                 SIDE_MARGIN, commonInfoBottomY + COMMON_INFO_OFFSET_Y,
-                columnWidth, maxColumnsPerSide,
+                columnWidth, maxColumnsPerSide, availableHeight,
                 scaledHeight
         );
 
-        if (drawnHandlers < validHandlers.size()) {
+        if (drawnModules < validModules.size()) {
             int rightStartX = (int) (scaledWidth - SIDE_MARGIN - columnWidth);
-            drawHandlerPanels(
-                    validHandlers, guiInfoMap, drawnHandlers,
+            drawModulePanels(
+                    validModules, guiInfoMap, drawnModules,
                     rightStartX, commonInfoBottomY + COMMON_INFO_OFFSET_Y,
-                    columnWidth, maxColumnsPerSide,
+                    columnWidth, maxColumnsPerSide, availableHeight,
                     scaledHeight
             );
         }
     }
 
-    /**
-     * 计算单侧边最多能显示的列数（根据屏幕宽度动态调整）
-     */
     @Unique
     private int calculateMaxColumnsPerSide(float scaledWidth, int columnWidth) {
-        // 屏幕中间预留核心游戏区域（占总宽度的50%）
         float centerAreaWidth = scaledWidth * 0.5f;
         float sideAvailableWidth = (scaledWidth - centerAreaWidth) / 2 - SIDE_MARGIN * 2;
 
-        // 计算单侧边能容纳的列数（至少1列）
         int maxColumns = Math.max(1, (int) (sideAvailableWidth / (columnWidth + COLUMN_SPACING)));
-        return Math.min(maxColumns, 3); // 最多3列，避免过于拥挤
+        return Math.min(maxColumns, 3);
     }
 
-    /**
-     * 绘制指定范围的Handler面板
-     *
-     * @param startIndex 起始Handler索引
-     * @return 实际绘制的Handler数量
-     */
     @Unique
-    private int drawHandlerPanels(List<Module> handlers, Map<Module, GuiBlockInfo> guiInfoMap, int startIndex,
+    private int drawModulePanels(List<Module> modules, Map<Module, GuiBlockInfo> guiInfoMap, int startIndex,
                                   int startX, int startY, int columnWidth,
-                                  int maxColumns, float scaledHeight) {
+                                  int maxColumns, int availableHeight, float scaledHeight) {
         int drawnCount = 0;
         int currentColumn = 0;
         int currentX = startX;
         int currentY = startY;
 
-        for (int i = startIndex; i < handlers.size(); i++) {
-            Module handler = handlers.get(i);
-            GuiBlockInfo guiInfo = guiInfoMap.get(handler);
+        for (int i = startIndex; i < modules.size(); i++) {
+            Module module = modules.get(i);
+            GuiBlockInfo guiInfo = guiInfoMap.get(module);
             if (guiInfo == null) continue;
 
-            // 构建调试文本并计算面板高度
-            List<String> debugLines = buildHandlerDebugLines(handler, guiInfo);
+            List<String> debugLines = buildHandlerDebugLines(module, guiInfo);
             int panelHeight = debugLines.size() * DEBUG_LINE_HEIGHT + DEBUG_PADDING * 2;
 
-            // 列数满了，换行
             if (currentColumn >= maxColumns) {
                 currentColumn = 0;
                 currentX = startX;
                 currentY += panelHeight + DEBUG_PADDING * 2;
 
-                // 超出屏幕高度，停止绘制
                 if (currentY + panelHeight > scaledHeight - SIDE_MARGIN) {
                     break;
                 }
             }
 
-            // 绘制面板背景
             RenderUtils.fill(
                     currentX, currentY,
                     currentX + columnWidth, currentY + panelHeight,
                     new Color(0, 0, 0, 50)
             );
 
-            // 绘制文本
             int lineY = currentY + DEBUG_PADDING;
             for (String line : debugLines) {
                 drawDebugLine(line, currentX + DEBUG_PADDING, lineY);
                 lineY += DEBUG_LINE_HEIGHT;
             }
 
-            // 更新位置和计数
             drawnCount++;
             currentColumn++;
             currentX += columnWidth + COLUMN_SPACING;
 
-            // 检查是否超出当前列的高度限制
             if (currentY + panelHeight > scaledHeight - SIDE_MARGIN) {
                 break;
             }
@@ -214,14 +223,17 @@ public abstract class MixinHud {
         return drawnCount;
     }
 
-    /**
-     * 绘制公共调试信息（左上角）
-     */
     @Unique
     private int drawCommonDebugInfo(int startX, int startY) {
         List<String> commonLines = new ArrayList<>();
-        commonLines.add("全局Tick: " + ModuleManager.getCurrentHandlerTime());
-        commonLines.add("活跃Module数: " + ModuleManager.VALUES.size());
+        commonLines.add(MessageUtils.translatable(KEY_GLOBAL_TICK, ModuleManager.getCurrentHandlerTime()).getString());
+        commonLines.add(MessageUtils.translatable(KEY_ACTIVE_MODULES, ModuleManager.VALUES.size()).getString());
+
+        ScanState dominantState = ScanState.COLLECT;
+        for (Module m : ModuleManager.VALUES) {
+            dominantState = m.getScanState();
+        }
+        commonLines.add(MessageUtils.translatable(KEY_SCAN_MODE, dominantState).getString());
 
         Minecraft mc = Minecraft.getInstance();
         int maxWidth = 0;
@@ -233,14 +245,12 @@ public abstract class MixinHud {
         int bgWidth = maxWidth + DEBUG_PADDING * 2;
         int bgHeight = commonLines.size() * DEBUG_LINE_HEIGHT + DEBUG_PADDING * 2;
 
-        // 绘制公共信息背景
         RenderUtils.fill(
                 startX, startY,
                 startX + bgWidth, startY + bgHeight,
                 new Color(0, 0, 0, 50)
         );
 
-        // 绘制文本
         int lineY = startY + DEBUG_PADDING;
         for (String line : commonLines) {
             drawDebugLine(line, startX + DEBUG_PADDING, lineY);
@@ -250,24 +260,22 @@ public abstract class MixinHud {
         return startY + bgHeight;
     }
 
-    // ========== HUD进度条等信息绘制 ==========
     @Unique
     private void drawHudInfo(float scaledWidth, float scaledHeight) {
         int centerX = (int) (scaledWidth / 2);
         int centerY = (int) (scaledHeight / 2);
         GUI guiHandler = ModuleManager.GUI;
 
-        // 延迟过大警告
         if (Configs.Core.LAG_CHECK.getBooleanValue() && ModuleManager.getPacketTick() > Configs.Core.LAG_CHECK_MAX.getIntegerValue()) {
-            RenderUtils.drawString("延迟过大，已暂停运行", centerX, centerY - 22, Color.ORANGE, true, true);
+            RenderUtils.drawString(MessageUtils.translatable(KEY_LAG_PAUSED).getString(), centerX, centerY - 22, Color.ORANGE, true, true);
         }
 
-        // 进度条显示
         double progress = guiHandler.getTotalProgress().getProgress();
         RenderUtils.drawString((int) (progress * 100) + "%", centerX, centerY + 22, Color.WHITE, true, true);
         drawProgressBar(centerX, centerY + 36, 40, 6, progress, new Color(0, 0, 0, 150), new Color(0, 255, 0, 255));
 
-        // 已启用模块名称显示
+        int infoY = centerY + 52;
+
         HashSet<String> modeNames = new HashSet<>();
         for (Module module : ModuleManager.VALUES) {
             if (module.getId().equals(GUI.NAME) || module.getEnableConfig() == null || !module.getEnableConfig().getBooleanValue()) {
@@ -275,14 +283,12 @@ public abstract class MixinHud {
             }
             modeNames.add(module.getEnableConfig().getPrettyName());
         }
-        if (!modeNames.isEmpty()) {
-            RenderUtils.drawString(String.join(", ", modeNames), centerX, centerY + 52, Color.WHITE, true, true);
-        }
+        RenderUtils.drawString(String.join(", ", modeNames), centerX, infoY, Color.WHITE, true, true);
     }
 
     @Unique
     private void drawProgressBar(int x, int y, int barWidth, int barHeight, double progress, Color bgColor, Color fgColor) {
-        double clampedProgress = Math.clamp(progress, 0.0, 1.0);
+        double clampedProgress = Math.max(0.0, Math.min(1.0, progress));
         int barXStart = x - (barWidth / 2);
         int barXEnd = x + (barWidth / 2);
         int barYEnd = y + barHeight;
